--- a/.github/workflows/groovy-build-test.yml
+++ b/.github/workflows/groovy-build-test.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: Chmod Gradle
+      run: chmod 777 ./gradlew 
+      
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
